--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
@@ -19,6 +23,7 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0",
